[CSDiag] Diagnose KeyPath tuple access as unsupported even when sugared

Follow-up for [SR-9213](https://bugs.swift.org/browse/SR-9213)